# nextvision

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  massif.out.baseline
.cargo/: audit.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
nv-core/: Cargo.toml
nv-core/src/: config.rs  error.rs  geom.rs  health.rs  id.rs  lib.rs  metadata.rs  metrics.rs  security.rs  timestamp.rs
nv-frame/: Cargo.toml
nv-frame/benches/: frame_bench.rs
nv-frame/src/: convert.rs  frame.rs  lib.rs  pool.rs
nv-jetson/: Cargo.toml  build.rs
nv-jetson/src/: ffi.rs  lib.rs  nvmm.rs
nv-media/: Cargo.toml
nv-media/src/: backend.rs  bridge.rs  bus.rs  clock.rs  decode.rs  event.rs  factory.rs  gpu.rs  gpu_provider.rs  hook.rs  ingress.rs  lib.rs  pipeline.rs  reconnect.rs  source.rs  source_tests.rs
nv-media/src/source/: event_handling.rs  ingress_impl.rs  mod.rs  polling.rs  tests.rs
nv-metrics/: Cargo.toml
nv-metrics/src/: error.rs  exporter.rs  lib.rs  recorder.rs
nv-perception/: Cargo.toml
nv-perception/src/: artifact.rs  batch.rs  detection.rs  lib.rs  pipeline.rs  scene.rs  signal.rs  stage.rs  temporal_access.rs  track.rs
nv-runtime/: Cargo.toml
nv-runtime/benches/: runtime_bench.rs
nv-runtime/examples/: mock_detector.rs  multi_feed.rs  multi_feed_pipeline.rs  ptz_aware.rs  stage_pipeline_direct.rs
nv-runtime/src/: backpressure.rs  batch.rs  diagnostics.rs  executor.rs  feed.rs  feed_handle.rs  lib.rs  output.rs  pipeline.rs  provenance.rs  queue.rs  runtime.rs  runtime_tests.rs  shutdown.rs  worker.rs
nv-runtime/src/batch/: config.rs  coordinator.rs  handle.rs  metrics.rs  mod.rs  tests.rs
nv-runtime/src/executor/: frame_processing.rs  lifecycle.rs  mod.rs  tests.rs  view.rs
nv-runtime/src/runtime_tests/: config.rs  diagnostics.rs  feed.rs  harness.rs  lifecycle.rs  mod.rs  output.rs  sink.rs
nv-runtime/src/worker/: feed_loop.rs  ingress_adapter.rs  mod.rs  shared_state.rs  sink.rs
nv-temporal/: Cargo.toml
nv-temporal/benches/: temporal_bench.rs
nv-temporal/src/: continuity.rs  lib.rs  retention.rs  store.rs  trajectory.rs
nv-temporal/src/store/: commit.rs  mod.rs  snapshot.rs  tests.rs
nv-test-util/: Cargo.toml
nv-test-util/src/: clock.rs  harness.rs  lib.rs  mock_stage.rs  synthetic.rs
nv-view/: Cargo.toml
nv-view/src/: bound.rs  camera_mode.rs  camera_motion.rs  epoch.rs  lib.rs  provider.rs  ptz.rs  transform.rs  transition.rs  validity.rs  view_state.rs
samples/: README.md
samples/docker/: Dockerfile
samples/models/: yolo26s.onnx
samples/nv-byo-ocsort/: Cargo.toml
samples/nv-byo-ocsort/src/: config.rs  kalman.rs  lib.rs  matching.rs  ocsort.rs  stage.rs
samples/nv-byo-yolox/: Cargo.toml
samples/nv-byo-yolox/src/: config.rs  letterbox.rs  lib.rs  nms.rs  postprocess.rs  stage.rs
samples/nv-sample-app/: Cargo.toml
samples/nv-sample-app/src/: cli.rs  main.rs  mode.rs  overlay.rs  sink.rs  ui.rs
samples/nv-sample-detection/: Cargo.toml
samples/nv-sample-detection/examples/: trt_first_inference.rs
samples/nv-sample-detection/src/: batch.rs  config.rs  inference.rs  letterbox.rs  lib.rs  nms.rs  postprocess.rs  preprocess.rs  session.rs  stage.rs
samples/nv-sample-tracking/: Cargo.toml
samples/nv-sample-tracking/src/: config.rs  kalman.rs  lib.rs  matching.rs  ocsort.rs  stage.rs
samples/nv-sample-yolox-ocsort/: Cargo.toml
samples/nv-sample-yolox-ocsort/src/: cli.rs  main.rs  overlay.rs  sink.rs
