[workspace]
resolver = "3"
members = [
    "nv-core",
    "nv-frame",
    "nv-media",
    "nv-perception",
    "nv-temporal",
    "nv-view",
    "nv-runtime",
    "nv-metrics",
    "nv-test-util",
    "nv-jetson",
    "samples/nv-sample-detection",
    "samples/nv-sample-tracking",
    "samples/nv-sample-app",
]
default-members = [
    "nv-core",
    "nv-frame",
    "nv-media",
    "nv-perception",
    "nv-temporal",
    "nv-view",
    "nv-runtime",
    "nv-metrics",
    "nv-test-util",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thenadz/nextvision"
homepage = "https://github.com/thenadz/nextvision"
categories = ["computer-vision", "multimedia::video", "concurrency"]
keywords = ["video", "perception", "gstreamer", "detection", "tracking"]

[workspace.dependencies]
# Internal crates
nv-core = { path = "nv-core" }
nv-frame = { path = "nv-frame" }
nv-media = { path = "nv-media", default-features = false }
nv-perception = { path = "nv-perception" }
nv-temporal = { path = "nv-temporal" }
nv-view = { path = "nv-view" }
nv-runtime = { path = "nv-runtime", default-features = false }
nv-test-util = { path = "nv-test-util" }
nv-metrics = { path = "nv-metrics", default-features = false }
nv-jetson = { path = "nv-jetson" }
nv-sample-detection = { path = "samples/nv-sample-detection", default-features = false }
nv-sample-tracking = { path = "samples/nv-sample-tracking" }

# External
criterion = { version = "0.5", features = ["html_reports"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tracing = "0.1"
