[workspace]
resolver = "3"
members = [
    "nv-core",
    "nv-frame",
    "nv-media",
    "nv-perception",
    "nv-temporal",
    "nv-view",
    "nv-runtime",
    "nv-metrics",
    "nv-test-util",
    "nv-jetson",
    "samples/nv-sample-detection",
    "samples/nv-sample-tracking",
    "samples/nv-sample-app",
]
default-members = [
    "nv-core",
    "nv-frame",
    "nv-media",
    "nv-perception",
    "nv-temporal",
    "nv-view",
    "nv-runtime",
    "nv-metrics",
    "nv-test-util",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thenadz/nextvision"
homepage = "https://github.com/thenadz/nextvision"
categories = ["computer-vision", "multimedia::video", "concurrency"]
keywords = ["video", "perception", "gstreamer", "detection", "tracking"]

[workspace.dependencies]
# Internal crates
nv-core = { version = "0.1.0", path = "nv-core" }
nv-frame = { version = "0.1.0", path = "nv-frame" }
nv-media = { version = "0.1.0", path = "nv-media", default-features = false }
nv-perception = { version = "0.1.0", path = "nv-perception" }
nv-temporal = { version = "0.1.0", path = "nv-temporal" }
nv-view = { version = "0.1.0", path = "nv-view" }
nv-runtime = { version = "0.1.0", path = "nv-runtime", default-features = false }
nv-test-util = { version = "0.1.0", path = "nv-test-util" }
nv-metrics = { version = "0.1.0", path = "nv-metrics", default-features = false }
nv-jetson = { version = "0.1.0", path = "nv-jetson" }
nv-sample-detection = { version = "0.1.0", path = "samples/nv-sample-detection", default-features = false }
nv-sample-tracking = { version = "0.1.0", path = "samples/nv-sample-tracking" }

# External
criterion = { version = "0.5", features = ["html_reports"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tracing = "0.1"
