[package]
name = "nv-core"
description = "Shared types, IDs, timestamps, geometry, errors, metadata, health events, and metrics for the NextVision runtime."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
