[package]
name = "nv-core"
description = "Shared types, IDs, timestamps, geometry, errors, metadata, health events, and metrics for the NextVision runtime."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "../README.md"

[dependencies]
thiserror.workspace = true
