[package]
name = "nv-frame"
description = "Frame abstraction for the NextVision runtime — zero-copy, ref-counted FrameEnvelope."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
nv-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "frame_bench"
harness = false
