[package]
name = "nv-temporal"
description = "Temporal state management — trajectories, motion features, continuity, and retention for the NextVision runtime."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "../README.md"

[dependencies]
nv-core.workspace = true
nv-perception.workspace = true
nv-view.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "temporal_bench"
harness = false
