[package]
name = "nv-view"
description = "PTZ/view-state, camera motion modeling, epoch policy, and context validity for the NextVision runtime."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "../README.md"

[dependencies]
nv-core.workspace = true
nv-frame.workspace = true
