[package]
name = "nv-sample-app"
description = "Sample binary: detection + tracking pipeline using the NextVision runtime."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "nv-sample-app"
path = "src/main.rs"

[dependencies]
nv-core.workspace = true
nv-perception.workspace = true
nv-runtime.workspace = true
nv-sample-detection.workspace = true
nv-sample-tracking.workspace = true

clap = { version = "4", features = ["derive"] }
ctrlc = "3"
eframe = "0.31"
egui = "0.31"
hostname = "0.4"
minifb = "0.27"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["nv-sample-detection/download-ort"]
system-ort = ["nv-sample-detection/system-ort"]
link-ort = ["nv-sample-detection/link-ort"]
gpu = ["nv-sample-detection/gpu"]
jetson = ["link-ort", "gpu"]

[dev-dependencies]
nv-test-util.workspace = true
