[package]
name = "nv-sample-app"
description = "Sample binary: detection + tracking pipeline using the NextVision runtime."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "nv-sample-app"
path = "src/main.rs"

[dependencies]
nv-core.workspace = true
nv-frame.workspace = true
nv-perception.workspace = true
nv-runtime = { workspace = true, default-features = false, features = ["gst-backend"] }
nv-media = { workspace = true, default-features = false, features = ["gst-backend"] }
nv-metrics = { workspace = true, default-features = false, features = ["otlp-grpc"] }
nv-sample-detection = { workspace = true, default-features = false }
nv-sample-tracking.workspace = true
nv-jetson = { workspace = true, optional = true }

clap = { version = "4", features = ["derive"] }
ctrlc = "3"
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "x11"] }
egui = "0.34"
hostname = "0.4"
minifb = "0.28"
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["nv-sample-detection/download-ort"]
system-ort = ["nv-sample-detection/system-ort"]
link-ort = ["nv-sample-detection/link-ort"]
gpu = ["nv-sample-detection/gpu", "nv-media/cuda"]
cuda = ["nv-media/cuda"]
jetson = ["link-ort", "nv-sample-detection/gpu", "jetson-nvmm"]
jetson-nvmm = ["dep:nv-jetson"]

[dev-dependencies]
nv-test-util.workspace = true
